--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,15 +1,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    android:gravity="center">
-    <ImageView android:layout_width="170dp"
-        android:layout_height="170dp" />
-    <TextView android:layout_width="wrap_content"
+    android:background="@color/splash"
+    android:gravity="center"
+    android:visibility="visible">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="170dp"
+
+        android:layout_height="170dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="86dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="399dp"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MyLogin"
+        android:layout_below="@+id/imageView"
+        android:layout_marginLeft="38dp"
+        android:layout_marginTop="40dp"
+        android:text="Examen Pmdm Javier Rengifo "
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="38dp"/>
+        android:textSize="24sp" />
 </RelativeLayout>
