hasta aqui funciona el fragmnet 1 y 3 los botones del fragemnte 1 no

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -30,4 +30,4 @@
         android:text="Examen Pmdm Javier Rengifo "
         android:textColor="@color/black"
         android:textSize="24sp" />
-</RelativeLayout>//
+</RelativeLayout>
