--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -24,9 +24,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
+        android:layout_alignBottom="@+id/imageView"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginBottom="-111dp"
+        android:background="@color/white"
         android:text="Examen Pmdm Javier Rengifo "
         android:textColor="@color/black"
         android:textSize="24sp" />
